--- a/static/scss/d&i.scss
+++ b/static/scss/d&i.scss
@@ -56,16 +56,11 @@
 .holographic{
     background: linear-gradient(to right, #41a8e7 40%, #e595e0 50%, #dace1b 60%);
     color: transparent;
-    background-clip: text;
+    -webkit-background-clip: text;
 }
 .border img{
     border: 5px solid white;
     margin: 15px 0;
-}
-.border img:hover{
-    border-image: linear-gradient(45deg, #417ae7 0%, #e595e0 50%, #81f4f4 100%);
-    border-image-slice: 1;
-    border-width: 5px;
 }
 
 .article{
@@ -82,17 +77,23 @@
     width: 50%;
     margin: auto;
     padding: 3px 0;
-    border: 1px solid white;
+    border: 2px solid white;
     border-radius: 20px;
+    align-self: center;
 }
+// .article:hover .articleBtn{
+//     background: linear-gradient(15deg, #5563d5 0%, #9bd0c9 50%, #f790ca 100%);
+//     background: #AFEEFC;
+//     letter-spacing: 1px;
+//     border: none;
+//     color: black;
+// }
+// .article:hover .border img{
+//     border-image: linear-gradient(45deg, #417ae7 0%, #e595e0 50%, #81f4f4 100%);
+//     border-image-slice: 1;
+//     border-width: 5px;
+// }
 
-.articleBtn:hover{
-    // background: linear-gradient(15deg, #5563d5 0%, #9bd0c9 50%, #f790ca 100%);
-    background: linear-gradient(10deg, #AFEEFC 13.54%, #F2C4E2 83.86%);
-    letter-spacing: 1px;
-    border: none;
-    color: black;
-}
 // arrow
 body {
 	background-color: #282828;
