--- a/static/scss/article.scss
+++ b/static/scss/article.scss
@@ -1,8 +1,6 @@
 body{
     background-color: white;
-    color: black;
-    font-family: 'Cooper Hewitt', sans-serif;
-    margin: 0;
+
 }
 h1, h2{
     margin: 0;
@@ -14,39 +12,67 @@ h2{
     font-weight:100;
     color: black;
 }
-.row{
-    margin: 10% 0;
+p{
+    margin: 3% 0;
 }
-
+.narrative{
+    background-color: white;
+}
+.row{
+    margin: 3% 0;
+}
+.introduction .row{
+    padding: 5% 0;
+    margin: 0;
+}
+.subtitle{
+    margin: 5% 0;
+}
 .author{
     border-top: 1px solid black;
     padding-top: 10%;
 }
 .interact{
-    height: 50vh;
-}
-.interact label{
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-}
-.textarea{
-  display: flex;
-  flex-direction: column;
-  height: 80vh;
-  width: 50%;
-  margin: auto;
+    height: 80vh;
+    width: 50%;
+    margin: auto;
+    background-color: white;
 
+    label{
+        width: 100%;
+        text-align: center;
+    }
+
+    input{
+        outline: none;
+        font-family: 'Cooper Hewitt';
+    }
 }
-.textarea label{
-  margin-top: 20vh;
-  letter-spacing: 5px;
-  font-size: 16px;
+// .textarea{
+//   display: flex;
+//   flex-direction: column;
+//   height: 70vh;
+//   width: 50%;
+//   margin: auto;
+//
+//   label{
+//     margin-top: 20vh;
+//     letter-spacing: 5px;
+//     font-size: 16px;
+//   }
+// }
+
+#thoughts{
+  width: 100%;
+  border-radius: 8px;
+  padding: 8px;
+  border: 1px solid black;
 }
 .fallarea{
+  font-family: 'Cooper Hewitt';
   display: inline-block;
   padding: 0px 12px;
-  margin-top: -20px;
+  margin-top: -30px;
   position: relative;
 }
 .fall{
@@ -60,16 +86,10 @@ h2{
     transform: translate(0, 0);
   }
   100% {
-    transform: translate(20px, 450px);
+    transform: translate(0px, 450px);
     opacity: 0;
   }
 }
 .old{
   opacity: 0;
-}
-#thoughts{
-    width: 100%;
-  border-radius: 8px;
-  padding: 10px;
-  border: 1px solid black;
 }
