--- a/static/scss/article.scss
+++ b/static/scss/article.scss
@@ -26,7 +26,11 @@ p{
     margin: 0;
 }
 .subtitle{
-    margin: 5% 0;
+    margin: 0 0;
+}
+.images img{
+    display: block;
+    margin: auto;
 }
 .author{
     border-top: 1px solid black;
@@ -47,20 +51,11 @@ p{
         outline: none;
         font-family: 'Cooper Hewitt';
     }
+
+    &::placeholder{
+
+    }
 }
-// .textarea{
-//   display: flex;
-//   flex-direction: column;
-//   height: 70vh;
-//   width: 50%;
-//   margin: auto;
-//
-//   label{
-//     margin-top: 20vh;
-//     letter-spacing: 5px;
-//     font-size: 16px;
-//   }
-// }
 
 #thoughts{
   width: 100%;
