--- a/static/scss/d&i.scss
+++ b/static/scss/d&i.scss
@@ -36,6 +36,9 @@ h4{
     font-size: 36px;
   }
 }
+#opening{
+    
+}
 // fade
 .fade_in {
   opacity: 0;
@@ -65,6 +68,10 @@ h4{
     }
     .detail{
         margin: 5% 0;
+    }
+
+    img{
+        min-height: 58vh;
     }
 }
 .articleBtn{
