--- a/static/scss/d&i.scss
+++ b/static/scss/d&i.scss
@@ -1,3 +1,6 @@
+body{
+    background-color: black;
+}
 h4{
     margin: 0
 }
@@ -65,7 +68,7 @@ h4{
 }
 
 .article{
-    padding: 0 20px;
+    padding: 0 30px;
     color: white;
     height: auto;
     a{
@@ -116,7 +119,7 @@ div.arrow {
 	box-sizing: border-box;
 	position: absolute;
 	left: 49%;
-  margin-top: 10%;
+    margin-top: 10%;
 	transform: rotate(135deg);
 
 	&::before {
@@ -161,5 +164,11 @@ div.arrow {
     height: auto;
     h3{
         margin:0;
+    }
+}
+
+@media (max-width: 600px){
+    .article{
+        height: 100%;
     }
 }
