--- a/static/scss/about.scss
+++ b/static/scss/about.scss
@@ -16,7 +16,7 @@ body {
 	// color: white;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h6{
     margin: 0;
     padding: 0;
 }
@@ -50,6 +50,8 @@ h5{
     font-size: 1.3vw;
     color: black;
     font-weight: 400;
+    margin: 20px 0;
+    line-height: 1.3;
 }
 h6 {
 	letter-spacing: .3vw;
@@ -67,10 +69,11 @@ ul {
 
 .join-us__text a{
     color: black;
+    text-decoration: underline;
 }
 .join-us__text a:hover{
-    color: #ffff00ff;
-    text-decoration: none;
+    background-color:rgb(255, 242, 120);
+    // text-decoration: none;
 }
 .main {
 	margin: 0px 0px 0px 180px;
