--- a/static/html/components/base.html
+++ b/static/html/components/base.html
@@ -1,21 +1,24 @@
 {% load static %}
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/index.js' %}"></script>
- 	<meta charset="utf-8">
- 	<title>Medium Design Collective</title>
- 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="{% static 'imgs/favicon.ico' %}" >
+    <meta charset="utf-8">
+    <title>Medium Design Collective</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'imgs/favicon.ico' %}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500,700" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block resources %}
     {% endblock %}
 </head>
+
 <body>
     <div id="hamburger"><i data-feather="menu"></i></div>
     <div class="nav no-display" id="nav">
@@ -29,7 +32,7 @@
                 about
             </a>
             <a class="nav__option unselectable" href="{% url 'teams' %}">
-                projects
+                teams
             </a>
             <a class="nav__option unselectable" href="{% url 'events' %}">
                 events
@@ -41,7 +44,7 @@
                 d&i
             </a>
 
-<!--             <a class="nav__option unselectable" href="https://medium1.typeform.com/to/EvuQMw">
+            <!--             <a class="nav__option unselectable" href="https://medium1.typeform.com/to/EvuQMw">
                 joinus
             </a> -->
 
@@ -63,9 +66,14 @@
 </body>
 <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 <script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+    integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+    crossorigin="anonymous"></script>
 {% block scripts %}
 {% endblock %}
 <script>feather.replace();</script>
+
 </html>
