--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -10,6 +10,8 @@ body{
 }
 .fullscreen-background__text a{
     color: white;
+    text-decoration: none;
+    font-size: 1.3rem;
 }
 .fullscreen-background__text a:hover{
     color: #ffff00ff;
