--- a/static/html/components/base.html
+++ b/static/html/components/base.html
@@ -38,7 +38,7 @@
                 events
             </a>
             <a class="nav__option unselectable" href="{% url 'rawexpo' %}">
-                raw expo
+                dec launch
             </a>
             <a class="nav__option unselectable" href="{% url 'diversity_and_inclusion' %}">
                 d&i
